# rocketRust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
archive/: main_mongo.rs
src/: db.rs  main.rs  models.rs
src/routes/: api.rs  pages.rs
templates/: index.html.tera  ips.html.tera
