[package]
name = "rocketRust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
bson = "2.0"
